feat:Add initial structure of the central part of the post

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </main>
             </div>
             <div class="col-lg-3">
-                <aside class="aside-right-homepage"> <!--ASIDE DERECHO-->
+                <aside class="aside-right-homepage d-none d-lg-block"> <!--ASIDE DERECHO-->
                     <div class="container">
                         <div class="row">
                             <div class="col-12">
