--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                                     <h5 class="date-font">Jan 20</h5>
                                 </div>
                             </div>
-                            <div class="card-body ms-1 me-1">
+                            <div class="card-body ms-1 me-1"></div>
                                 <a href="">
                                     <h3 class="fw-bold">Lorem ipsum, dolor sit amet consectetur adipisicing..</h3>
                                 </a>
