feat:Add initial part of comment section

--- a/post.html
+++ b/post.html
@@ -40,7 +40,7 @@
         </nav>
     </header>
 
-    <div class="container">
+    <div class="container mt-3">
         <div class="row">
             <div class="col-lg-1">
                 <aside class="aside-left-post d-none d-lg-block"> <!--ASIDE IZQUIERDO-->
@@ -158,18 +158,17 @@
                                             </p>
                                             <p class="align-self-start font-monospace">Time for #DEVDiscuss — right here
                                                 on DEV 😎</p>
-                                            <div class="card mt-3 mb-3 max-vw-100 position-relative">
+                                            <div class="card mt-3 mb-3 max-vw-100 position-relative shadow">
                                                 <div class="row g-0">
-                                                    <div class="col-md-4">
+                                                    <div class="col-1 col-lg-2">
                                                         <img src="assets/post-card-image.jpg"
-                                                            class="img-fluid rounded-circle position-absolute"
-                                                            style="width:100px;" alt="post-card-image">
+                                                            class="post-card-image rounded-circle position-absolute" style="max-width: 85px"  alt="post-card-image">
                                                     </div>
-                                                    <div class="col-md-8">
+                                                    <div class="col-9 col-lg-8">
                                                         <div class="card-body">
                                                             <h2 class="card-title">Should Developers Specialize or
                                                                 Generalize?</h2>
-                                                            <p>Void⚡ ・ Jan 24 ・ 2 min read</p>
+                                                            <p class="fs-6 fw-semibold">Void⚡ ・ Jan 24 ・ 2 min read</p>
                                                             <span class="d-flex justify-content-between">
                                                                 <p class="category text-muted d-inline">#career</p>
                                                                 <p class="category text-muted d-inline">#beginners</p>
@@ -180,6 +179,15 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <p class="align-self-start font-monospace">Inspired by <a class="text-principal text-decoration-underline" href="#">@codewithvoid</a>'s Top 7 post, tonight’s topic is...should you specialize or generalize as a developer? 🤔</p>
+                                            <p class="align-self-start font-monospace">Questions:</p>
+                                            <ul class="align-self-start border-bottom border-dark-subtle pb-5">
+                                                <li class="fw-bolder">Have you chosen to specialize or generalize as a developer?</li>
+                                                <li class="fw-bolder">What are the pros and cons of your approach?</li>
+                                                <li class="fw-bolder">What are the pros and cons of the <em>other</em> approach?</li>
+                                                <li class="fw-bolder">Any triumphs, fails, or other stories you'd like to share on this topic?</li>
+                                            </ul>
+                                            <h4 class="align-self-start fw-bold mt-4">Top comments (18)</h4>
                                         </div>
                                     </article>
                                 </section>
