--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@
                 </main>
             </div>
             <div class="col-lg-3">
-                <aside class="aside-right-homepage d-none d-lg-block"> <!--ASIDE DERECHO-->
+                <aside class="aside-right-homepage d-none d-lg-block mt-3"> <!--ASIDE DERECHO-->
                     <div class="container">
                         <div class="row">
                             <div class="col-12">
