feat:Add flex-wrap to footer listing

--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@
                         software developers. With you every step of your journey.</p>
                 </div>
                 <div class="col-12">
-                    <ul class="d-flex justify-content-center">
+                    <ul class="d-flex flex-wrap justify-content-center">
                         <li class="me-4" style="list-style-type: none">
                             <a href="#">Home</a>
                         </li>
@@ -1074,7 +1074,7 @@
                     </ul>
                 </div>
                 <div class="col-12">
-                    <ul class="d-flex justify-content-center">
+                    <ul class="d-flex flex-wrap justify-content-center">
                         <li class="me-4" style="list-style-type: none">
                             <a href="#">Code of Conduct</a>
                         </li>
