--- a/post.html
+++ b/post.html
@@ -158,11 +158,11 @@
                                             </p>
                                             <p class="align-self-start font-monospace">Time for #DEVDiscuss — right here
                                                 on DEV 😎</p>
-                                            <div class="card mt-3 mb-3 max-vw-100 position-relative shadow">
+                                            <div class="card mt-3 mb-3 position-relative shadow">
                                                 <div class="row g-0">
                                                     <div class="col-1 col-lg-2">
                                                         <img src="assets/post-card-image.jpg"
-                                                            class="post-card-image rounded-circle position-absolute" style="max-width: 85px"  alt="post-card-image">
+                                                            class="post-card-image rounded-circle position-absolute" style="width: 50px"  alt="post-card-image">
                                                     </div>
                                                     <div class="col-9 col-lg-8">
                                                         <div class="card-body">
@@ -277,7 +277,7 @@
                         software developers. With you every step of your journey.</p>
                 </div>
                 <div class="col-12">
-                    <ul class="d-flex justify-content-center">
+                    <ul class="d-flex flex-wrap justify-content-center">
                         <li class="me-4" style="list-style-type: none">
                             <a href="#">Home</a>
                         </li>
@@ -317,7 +317,7 @@
                     </ul>
                 </div>
                 <div class="col-12">
-                    <ul class="d-flex justify-content-center">
+                    <ul class="d-flex flex-wrap justify-content-center">
                         <li class="me-4" style="list-style-type: none">
                             <a href="#">Code of Conduct</a>
                         </li>
